Fixed content layout shift

--- a/stylesheets/layouts/search.scss
+++ b/stylesheets/layouts/search.scss
@@ -57,3 +57,7 @@
     }
   }
 }
+
+.search-results-placeholder {
+  height: 234px;
+}
